--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
         </section>
         <hr>
         <!--End-->
+
+        <!--Cose da fare-->
+        <h4>Cose da fare</h4>
+        <ul>
+            <li>Visitare la Tower of London &#9746;</li>
+            <li>Visitare greenwich &#9745;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#9745;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &#9746;</li>
+        </ul>
+        <hr>
+        <!--End-->
     </main>
     
 </body>
