--- a/index.html
+++ b/index.html
@@ -69,7 +69,33 @@
         </section>
         <!--End-->
 
-
+        <!--Info utili-->
+        <section>
+        <h4>Info utili:</h4>
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li><b>999</b> - Emergenza</li>
+                    <li><b>101</b> - Numero polizia</li>
+                    <li><b>111</b> - Numero assistenza medica</li>
+                </ul>
+            </li>
+            <li>Hotel
+                <ul>
+                    <li><b>Nome hotel</b>: Buckingham Palace</li>
+                    <li><b>Indirizzo hotel</b>: Westminster, London SW1A 1AA, Regno Unito</li>
+                </ul>
+            </li>
+            <li>Aereo
+                <ul>
+                    <li><b>Volo di Andata</b>: YI234X, ore 9.30 da Milano Malpensa</li>
+                    <li><b>Volo di Ritorno</b>: YI236X, ore 18.30 da London Heathrow</li>
+                </ul>
+            </li>
+        </ol>
+        <hr>
+        </section>
+        <!--End-->
     </main>
     
 </body>
