--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
         </section>
         <!--End-->
 
+        <!--Le foto-->
+        <section>
+            <h4>Le foto</h4>
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Bridge and building with white dome" width="325">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="London Bridge" width="325">
+        </section>
+        <!--End-->
         
     </main>
     
