--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <!--Titolo e foto iniziali-->
         <section>
             <h1>Il mio Viaggio a Londra</h1>
-            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="London Eye" width="240" height="500">
-            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="Bridge over the Thames" width="240" height="500">
-            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Palace of Westminster" width="240" height="500">
+            <img src=".img/pexels-bill-emrich-230794-0.jpg" alt="London Eye" width="240" height="500">
+            <img src=".img/pexels-bill-emrich-230794-1.jpg" alt="Bridge over the Thames" width="240" height="500">
+            <img src=".img/pexels-bill-emrich-230794-2.jpg" alt="Palace of Westminster" width="240" height="500">
             <hr>
         </section>
         <!--End-->
